agregado de botones redes sociales

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <link rel="stylesheet" href="./styles/index.css">
   <link rel="stylesheet" href="./styles/responsive.css"
 
-  <!-- Icons CSS -->
-  <link href="./fonts/themify-icons.css" rel="stylesheet">
+  <!-- Iconos --> 
+  <link href="fonts/themify-icons.css" rel="stylesheet">
 
   <!-- Google Fonts -->  
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,600" rel="stylesheet">
@@ -216,7 +216,13 @@
       </section>
       <section class="boxDoble">
         <p class="textoGeneralNegro">acá otros datos de contacto<br/></p>
-        <a href="#" target="_blank"><button class="botonRedes">F</button></a>
+        <p class="textoGeneralNegro">Manuela Castro 990, Lomas de Zamora<br/>Buenos Aires, Argentina<br/>ensamcooperadora@gmail.com</p>
+        <section class="redesSociales"> <!-- recordar display flex -->
+          <button class="botonRedes" onclick="window.open('mailto:ensamcooperadora@gmail.com');"><i class="fa fa-envelope"></i></button>
+          <a href="#" target="_blank"><button class="botonRedes">F</button></a>
+          <a href="#" target="_blank"><button class="botonRedes">I</button></a>
+          <a href="#" target="_blank"><button class="botonRedes">I</button></a>
+        </section>
       </section>
     </section>
   </section>
