--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
   <!-- Library CSS -->
   <link rel="stylesheet" href="./styles/index.css">
-  <link rel="stylesheet" href="./styles/responsive.css"
+  <link rel="stylesheet" href="./styles/responsive.css">
 
-  <!-- Iconos --> 
-  <link href="fonts/themify-icons.css" rel="stylesheet">
+  <!-- Iconos -->
+  <link rel="stylesheet" href="./fonts/themify-icons.css">
 
   <!-- Google Fonts -->  
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,600" rel="stylesheet">
