Subiendo todos los archivos. Sheila prueba de clonar, no cambio

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             himenaeos curae, sagittis diam iaculis ultricies tempor porta sodales. Auctor dui lectus donec quam odio
             litora, senectus mauris libero facilisis nascetur pellentesque, phasellus praesent urna lobortis suscipit.
             Aliquet porttitor habitasse conubia semper consequat a ornare at himenaeos odio iaculis turpis commodo
-            vivamus quis ultrices potenti ridiculus maecenas, euismod tempus non dictumst eu curabitur elementum velit
+            vivamus quis ultrices potenti ridiculus maecenas, euismod tempus non dictumst eu curabitur elementum vel
             nulla habitant auctor mauris magnis sapien eget dis in.</p>
           <h4 class="celesteClaro textTitulares">Integrantes</h4> <!-- la clase TextTitulares tendra padding top/botoom -->
           <section class="textoNombresCargos textDosColumnas"> <!-- la clase TextDosColumnas style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;" -->
