correccion html cierre etiq y css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <main>
     <!-- Nosotros -->
     <section id="nosotros" class="bgBlanco">
-      <section id="contenedor">
+      <section class="contenedor">
         <section class="gridContenedorSimple"> <!-- la clase gridContenedorSimple debe adaptarse a diferentes tamaños de pantallas -->
           <h2 class="textoAzulClaro">Nosotros</h2>
         </section>
@@ -207,8 +207,9 @@
             ya sea desde tu profesión u oficio, hacé clic en el botón:</p><br/>
             <a href="/camapanas.html" target="_blank"><button class="botonSecundario">Ver más</button></a>
         </section>
-      
+      </section>
     </section>
+  
     <!-- contacto -->
     <section id="Contacto" class="bgBlanco">
       <section class="contenedor">
