correc cierre etiq index + css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <main>
     <!-- Nosotros -->
     <section id="nosotros" class="bgBlanco">
-      <section id="contenedor">
+      <section class="contenedor">
         <section class="gridContenedorSimple"> <!-- la clase gridContenedorSimple debe adaptarse a diferentes tamaños de pantallas -->
           <h2 class="textoAzulClaro">Nosotros</h2>
         </section>
