Agregue iconos y los links a las redes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Andalus" rel="stylesheet">
 
+  <!-- Iconos para redes sociales --> 
+  <script src="https://kit.fontawesome.com/874b1f1307.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -237,16 +239,17 @@
         <p class="textoGeneralNegro">Manuela Castro 990, Lomas de Zamora<br/>Buenos Aires, Argentina<br/>ensamcooperadora@gmail.com</p>
         <section class="redesSociales"> <!-- recordar display flex -->
           <button class="botonRedes" onclick="window.open('mailto:ensamcooperadora@gmail.com');"><i class="fa fa-envelope"></i></button>
-          <a href="#" target="_blank"><button class="botonRedes">F</button></a>
-          <a href="#" target="_blank"><button class="botonRedes">I</button></a>
-          <a href="#" target="_blank"><button class="botonRedes">I</button></a>
+          <button class="botonRedes" onclick="window.open('https:/www.facebook.com/cooperadora.ensam');"><i class="fa-brands fa-facebook"></i></button>
+          <button class="botonRedes" onclick="window.open('https:/www.instagram.com/cooperadoraensam/');"><i class="fa-brands fa-instagram"></i></button>
+
+          
+          
+          </a>
         </section>
       </section>
     </section>
   </section>
 </section>
-
-
   </main>
   <script src="./javascript/index.js"></script>
 </body>
