--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Portada -->
   <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
     <section class="contenedor">
-      <section id="pieDeBanner gridContainerPorcentual"> 
+      <section class="pieDeBanner gridContainerPorcentual"> 
         <section class="elementoPortada1"> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
           <h1 class="alignTextTop">Asociación Cooperadora<br/>Unidad Académica<br/>Antonio Mentruyt</h1>
           <p class="andaluciaScript alignTextBottom">Por amor a Nuestra Escuela, a Nuestras Familias y a la Educación Pública</p> 
@@ -210,7 +210,7 @@
       
     </section>
     <!-- contacto -->
-    <section id="Contacto" class="bgBlanco">
+    <section id="contacto" class="bgBlanco">
       <section class="contenedor">
         <section class="gridContenedorSimple"> 
           <h2 class="textoAzulClaro">Contacto</h2>
