--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 
       </section>
       <section class="boxDoble">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26225.708053344693!2d-58.404399505834974!3d-34.750214127949896!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd29b97220dd5%3A0x26bf08cc12c24ceb!2sENSAM!5e0!3m2!1ses-419!2sar!4v1684115079018!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p class="textoGeneralNegro">Horarios de atención del ISFD: Lunes a viernes de 19 a 21 hs.</p>
         <p class="textoGeneralNegro">Teléfono: 4248-1700</p>
         <p class="textoGeneralNegro">Manuela Castro 990, Lomas de Zamora<br/>Buenos Aires, Argentina<br/>ensamcooperadora@gmail.com</p>
