Subiendo css actualizado mio  apartir de lo tenia Virshi,sume ubicacion Viktor. Banner no

--- a/index.html
+++ b/index.html
@@ -83,28 +83,29 @@
         <section class="gridContenedorSimple">
           <!--Shei Inicio Viktor-->
           <p class="textoGeneralNegro"><!--Shei Inicio Viktor-->
-            Nuestra historia se remonta a 1957, cuando un grupo de padres y maestros comprometidos se unió con un objetivo en común: brindar un apoyo sólido a la educación de nuestros estudiantes y contribuir al crecimiento de nuestra comunidad escolar.
+              Nuestra historia se remonta a 1957, cuando un grupo de padres y maestros comprometidos se unió con un objetivo en común: brindar un apoyo sólido a la educación de nuestros estudiantes y contribuir al crecimiento de nuestra comunidad escolar.
   
-              Desde entonces, hemos trabajado incansablemente para marcar una diferencia significativa en la vida de nuestros estudiantes y fortalecer los lazos entre la escuela, los padres y la comunidad. A lo largo de los años, hemos logrado grandes avances y alcanzado metas importantes, gracias al esfuerzo y la dedicación de todos los que formamos parte de esta Cooperadora Escolar.</p><!--Shei Fin-->
+              Desde entonces, hemos trabajado incansablemente para marcar una diferencia significativa en la vida de nuestros estudiantes y fortalecer los lazos entre la escuela, los padres y la comunidad. A lo largo de los años, hemos logrado grandes avances y alcanzado metas importantes, gracias al esfuerzo y la dedicación de todos los que formamos parte de esta Cooperadora Escolar.
+            </p><!--Shei Fin-->
           <h4 class="celesteClaro textTitulares">Integrantes</h4> <!-- la clase TextTitulares tendra padding top/botoom -->
           <section class="textoNombresCargos textDosColumnas"> <!-- la clase TextDosColumnas style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;" -->
             <p>
-              <span class="span cargos">Presidenta</span> Paola Guzmán<br/>
-              <span class="span cargos">Secretaria</span> Natalia Lissarrague<br/>
-              <span class="span cargos">Tesorera</span> María Gabriela González<br/>
-              <span class="span cargos">Vocal 1 titular</span> Micaela Dominguez Caetano<br/>
-              <span class="span cargos">Vocal 1 suplente</span> Christian Lopez<br/>
-              <span class="span cargos">Vocal 2 titular</span> Mirtha Susana<br/>
-              <span class="span cargos">Vocal 2 suplente</span> Gloria Mabel Abelleira<br/>
+              <span class="spancargos">Presidenta</span> Paola Guzmán<br/>
+              <span class="spancargos">Secretaria</span> Natalia Lissarrague<br/>
+              <span class="spancargos">Tesorera</span> María Gabriela González<br/>
+              <span class="spancargos">Vocal 1 titular</span> Micaela Dominguez Caetano<br/>
+              <span class="spancargos">Vocal 1 suplente</span> Christian Lopez<br/>
+              <span class="spancargos">Vocal 2 titular</span> Mirtha Susana Gonzalez<br/>
+              <span class="spancargos">Vocal 2 suplente</span> Gloria Mabel Abelleira<br/>
             </p>
             <p>
-              <span class="span cargos">Vocal 3 titular</span> Laira Vallejos<br/>
-              <span class="span cargos">Vocal 3 suplente</span> Liliana Bogado<br/>
-              <span class="span cargos">Vocal 4 titular</span> Virginia Bernadette Annun<br/>
-              <span class="span cargos">Vocal 4 suplente</span> Fernanda<br/>
-              <span class="span cargos">Revisor de Cuentas docente</span> Claudia García<br/>
-              <span class="span cargos">Revisor de Cuentas titular</span> Emilio<br/>
-              <span class="span cargos">Revisor de Cuentas suplente</span> Juan Manuel Latorre<br/>	
+              <span class="spancargos">Vocal 3 titular</span> Laira Vallejos<br/>
+              <span class="spancargos">Vocal 3 suplente</span> Liliana Bogado<br/>
+              <span class="spancargos">Vocal 4 titular</span> Virginia Bernadette Annun<br/>
+              <span class="spancargos">Vocal 4 suplente</span> Fernanda Aguilar<br/>
+              <span class="spancargos">Revisor de Cuentas docente</span> Claudia García<br/>
+              <span class="spancargos">Revisor de Cuentas titular</span> Emilio Perez<br/>
+              <span class="spancargos">Revisor de Cuentas suplente</span> Juan Manuel Latorre<br/>	
             </p>
           </section>
         </section>
@@ -292,6 +293,8 @@
 
         
           <section class="boxDoble">
+            <!--Agregado a ultimo momento de Viktor, ubicacion.Falta el css-->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26225.708053344693!2d-58.404399505834974!3d-34.750214127949896!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd29b97220dd5%3A0x26bf08cc12c24ceb!2sENSAM!5e0!3m2!1ses-419!2sar!4v1684115079018!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <!--Shei Inicio-->
             <p class="textoGeneralNegro">Horarios de atención del ISFD: Lunes a viernes de 19 a 21 hs.</p>
             <p class="textoGeneralNegro">Teléfono: 4248-1700</p><!--Shei Fin-->
