Subiendo mejora de btn Redes

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
 
 
             <section class="redesSociales">
-              <button class="botonRedes" onclick="window.open('mailto:ensamcooperadora@gmail.com');">E </button>                  
-              <a href="https:/www.facebook.com/cooperadora.ensam" target="_blank"><button class="botonRedes">F</button></a>
+              <button class="botonRedes" onclick="window.open('mailto:ensamcooperadora@gmail.com');">e</button>                  
+              <a href="https:/www.facebook.com/cooperadora.ensam" target="_blank"><button class="botonRedes">f</button></a>
               <a href="https:/www.instagram.com/cooperadoraensam/" target="_blank"><button class="botonRedes">I</button></a>
               
             </section>
