--- a/index.html
+++ b/index.html
@@ -65,20 +65,35 @@
       </ul>
     </section>
   </section>
-  <!-- Portada -->
-  <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
-    <section class="contenedor">
+  <!-- Portada <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
+    <!--<section class="contenedor">
       <section class="pieDeBanner gridContainerPorcentual"> 
-        <section class="elementoPortada1"> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
-          <h1 class="alignTextTop">Asociación Cooperadora<br/>Unidad Académica<br/>Antonio Mentruyt</h1>
-          <p class="cookieScript alignTextBottom">Por amor a Nuestra Escuela, a Nuestras Familias y a la Educación Pública</p> <!--Ver de cambiar a fuente Rouge Shei-->
-        </section>
-        <section class="elementoPortada2"> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
-          <img src="./img/rectangle-6@2x.png" alt="Logo Ensam">
+        <section class="elementoPortada1"> --><!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
+          <!--<h1 class="alignTextTop">Asociación Cooperadora<br/>Unidad Académica<br/>Antonio Mentruyt</h1>
+          <p class="cookieScript alignTextBottom">Por amor a Nuestra Escuela, a Nuestras Familias y a la Educación Pública</p> --><!--Ver de cambiar a fuente Rouge Shei-->
+       <!-- </section>
+        <section class="elementoPortada2">--> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
+         <!-- <img src="./img/rectangle-6@2x.png" alt="Logo Ensam">
         </section>        
       </section>  
     </section>     
+  </section>-->
+
+  <section id="portada" class="bgAzul bgBanner">
+    <section class="contenedor">
+      <section class="pieDeBanner gridContainerPorcentual">
+        <section class="elementoPortada1">
+          <h1>Asociación Cooperadora<br>Unidad Académica<br>Antonio Mentruyt</h1>
+          <p>Por amor a Nuestra Escuela, a Nuestras Familias y a la Educación Pública</p>
+        </section>
+        <section class="elementoPortada2">
+          <img src="./img/rectangle-6@2x.png" alt="Logo Ensam">
+        </section>
+      </section>
+    </section>
   </section>
+  
+  
   <!-- Main -->    
   <main>
     <!-- Nosotros -->
@@ -228,7 +243,7 @@
               <a href="#" target="_blank"><button class="botonSecundario">Donar para esta campaña</button></a>
           </section>
           <section class="boxDoble">
-            <img src="./img/camapana1.jpg" alt="campaña insumos">
+            <img src="./img/refaccionAulas.png" alt="campaña insumos">
           </section>
           <section class="contenedorDoble">
             <section class="boxDoble">
@@ -240,7 +255,7 @@
                 <a href="#" target="_blank"><button class="botonSecundario">Donar para esta campaña</button></a>
             </section>
             <section class="boxDoble">
-              <img src="./img/camapana2.jpg" alt="Refacción de aulas">
+              <img src="./img/clases.jpg" alt="Refacción de aulas">
             </section>
           </section>
         </section>
@@ -311,7 +326,7 @@
             <section class="redesSociales">
               <button class="botonRedes" onclick="window.open('mailto:ensamcooperadora@gmail.com');">e</button>                  
               <a href="https:/www.facebook.com/cooperadora.ensam" target="_blank"><button class="botonRedes">f</button></a>
-              <a href="https:/www.instagram.com/cooperadoraensam/" target="_blank"><button class="botonRedes">I</button></a>
+              <a href="https:/www.instagram.com/cooperadoraensam/" target="_blank"><button class="botonRedes">i</button></a>
               
             </section>
           </section>
