--- a/index.html
+++ b/index.html
@@ -45,17 +45,23 @@
         <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
       </a>
     </section>
-    <section id="nav" class="contenedor navegador1">
-      <ul id="navegador" class="top_menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#nosotros">Nosotros</a></li>
-        <li><a href="#acciones">Acciones</a></li>
-        <li><a href="#socios">Socios/as</a></li> 
-        <li><a href="#campanas">Campañas</a></li>
-        <li><a href="#contacto">Contacto</a></li>                        
-      </ul>
-    </section>
+    <section class="navegadores">
+      <section class="navMobile">
+        <button id="hamburguer-btn" class="hamburguesa hamburguer-btn">
+        </button>
+      </section>
+      <section id="nav" class="contenedor navegador1">      
+        <ul id="navegador" class="top_menu"> 
+          <li><a href="#">Home</a></li>
+          <li><a href="#nosotros">Nosotros</a></li>
+          <li><a href="#acciones">Acciones</a></li>
+          <li><a href="#socios">Socios/as</a></li> 
+          <li><a href="#campanas">Campañas</a></li>
+          <li><a href="#contacto">Contacto</a></li>                        
+        </ul>      
+      </section>
   </section>
+</section>
   <!-- Portada -->
   <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
     <section class="contenedor">
@@ -100,7 +106,7 @@
               <span class="cargos">Vocal 3 titular</span> Laira Vallejos<br/>
               <span class="cargos">Vocal 3 suplente</span> Liliana Bogado<br/>
               <span class="cargos">Vocal 4 titular</span> Virginia Bernadette Annun<br/>
-              <span class="argos">Vocal 4 suplente</span> Fernanda<br/>
+              <span class="cargos">Vocal 4 suplente</span> Fernanda<br/>
               <span class="cargos">Revisor de Cuentas docente</span> Claudia García<br/>
               <span class="cargos">Revisor de Cuentas titular</span> Emilio<br/>
               <span class="cargos">Revisor de Cuentas suplente</span> Juan Manuel Latorre<br/>	
