imágenes, favicon, y mas css sobre nav/hamburguer menu

--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
   <!-- Header -->
   <section id="header" class="bgAzul">
     <!-- Logo. Class "logoTexto" no va en mobile -->
-    <section id="logo" class="contenedor"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
+    <section id="logo" class="contenedor header-flex logoMobile"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
       <a href="#">
-        <img src="./img/logo.png" alt="Logo">
+        <img src="./img/logoHeader.png" alt="logo" class="logoBanner">
         <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
       </a>
-    </section>
-    <section class="navegadores">
       <section class="navMobile">
         <button id="hamburguer-btn" class="hamburguesa hamburguer-btn">
         </button>
       </section>
+    </section>
+    <section class="navegadores">      
       <section id="nav" class="contenedor navegador1">      
         <ul id="navegador" class="top_menu"> 
           <li><a href="#">Home</a></li>
           <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="#acciones">Acciones</a></li>
-          <li><a href="#socios">Socios/as</a></li> 
-          <li><a href="#campanas">Campañas</a></li>
-          <li><a href="#contacto">Contacto</a></li>                        
+          <li><a href="#acciones" class="rayita">Acciones</a></li>
+          <li><a href="#socios" class="rayita">Socios/as</a></li> 
+          <li><a href="#campanas" class="rayita">Campañas</a></li>
+          <li><a href="#contacto" class="rayita">Contacto</a></li>                        
         </ul>      
       </section>
   </section>
