detalles estilo nav

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Logo. Class "logoTexto" no va en mobile -->
     <section id="logo" class="contenedor header-flex logoMobile"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
       <a href="#">
-        <img src="./img/logoHeader.png" alt="logo" class="logoBanner">
+        <img src="./img/logo@2x.png" alt="logo" class="logoBanner">
         <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
       </a>
       <section class="navMobile">
@@ -49,7 +49,7 @@
         </button>
       </section>
     </section>
-    <section class="navegadores">      
+    <section id="navegadores" class="navegadores">      
       <section id="nav" class="contenedor navegador1">      
         <ul id="navegador" class="top_menu"> 
           <li><a href="#">Home</a></li>
