--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
 
 <body>  
   <!-- Header -->
-  <section id="header" class="bgAzul">
-    <!-- Logo. Class "logoTexto" no va en mobile -->
-    <section id="logo" class="contenedor header-flex logoMobile"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
-      <a href="#">
-        <img src="./img/logo@2x.png" alt="logo" class="logoBanner">
-        <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
-      </a>
-      <section class="navMobile">
-        <button id="hamburguer-btn" class="hamburguesa hamburguer-btn">
-        </button>
-      </section>
-    </section>
-    <section id="navegadores" class="navegadores">      
+  <header id="cabecera" class="sticky-header"> 
+    <section id="header" class="bgAzul">
+      <section id="logo" class="contenedor header-flex logoMobile"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
+        <a href="#">
+          <img src="./img/logo@2x.png" alt="logo" class="logoBanner">
+          <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
+        </a>
+        <section class="navMobile">
+          <button id="hamburguer-btn" class="hamburguesa hamburguer-btn">
+          </button>
+        </section>
+      </section> 
       <section id="nav" class="contenedor navegador1">      
         <ul id="navegador" class="top_menu"> 
           <li><a href="#">Home</a></li>
@@ -59,9 +58,9 @@
           <li><a href="#campanas" class="rayita">Campañas</a></li>
           <li><a href="#contacto" class="rayita">Contacto</a></li>                        
         </ul>      
-      </section>
-  </section>
-</section>
+      </section>    
+    </section>
+  </header>
   <!-- Portada -->
   <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
     <section class="contenedor">
@@ -294,5 +293,6 @@
   <!-- Scripts -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="./javascript/index.js"></script>
+  <script src="./javascript/btnHamburguesa.js"></script>
 </body>
 </html>
