--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <link rel="stylesheet" href="./styles/responsive.css">
 
   <!-- Iconos -->
-  <link rel="stylesheet" href="./fonts/themify-icons.css">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
 
   <!-- Google Fonts -->  
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -267,11 +268,10 @@
           <section class="boxDoble">
             <p class="textoGeneralNegro">acá otros datos de contacto<br/></p>
             <p class="textoGeneralNegro">Manuel Castro 990, Lomas de Zamora<br/>Buenos Aires, Argentina<br/>ensamcooperadora@gmail.com</p>
-            <section class="redesSociales"> <!-- los iconos aun no funcionan... themify-icons revisar-->
-              <button class="botonRedes" onclick="window.open('mailto:ensamcooperadora@gmail.com');"><i class="fa fa-envelope"></i></button>
-              <a href="#" target="_blank"><button class="botonRedes">F</button></a>
-              <a href="#" target="_blank"><button class="botonRedes">I</button></a>
-              <a href="#" target="_blank"><button class="botonRedes">I</button></a>
+            <section class="redesSociales"> 
+              <a href="mailto:ensamcooperadora@gmail.com" class="botonRedes"><i class="fi fi-rr-envelope"></i></a>
+              <a href="https://www.instagram.com/cooperadoraensam" target="_blank" class="botonRedes"><i class="fi fi-brands-instagram"></i></a>
+              <a href="https://www.facebook.com/cooperadora.ensam" target="_blank" class="botonRedes"><i class="fi fi-brands-facebook"></i></a>
             </section>
           </section>
         </section>
