css, correción cierre etiq, imagenes escuela, responsive

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
   </header>
   <!-- Portada -->
   <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
-    <section class="contenedor">
+    <section class="contenedor contenedorPortada">
       <section class="pieDeBanner gridContainerPorcentual"> 
         <section class="elementoPortada1"> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
           <h1 class="alignTextTop">Asociación Cooperadora<br/>Unidad Académica<br/>Antonio Mentruyt</h1>
           <p class="cookieScript alignTextBottom">Por amor a Nuestra Escuela, a Nuestras Familias y a la Educación Pública</p> 
         </section>
         <section class="elementoPortada2"> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
-          <img src="../img/logoColor.png" alt="Logo Ensam">
+          <img src="./img/logoColor.png" alt="Logo Ensam">
         </section>        
       </section>  
     </section>     
@@ -192,7 +192,7 @@
               <a href="#" target="_blank" class="botonSecundario">Donar para esta campaña</a>
           </section>
           <section class="boxDoble">
-            <img src="./img/camapana1.jpg" alt="campaña insumos">
+            <img src="./img/campana1.jpg" alt="campaña insumos">
           </section>
           <section class="contenedorDoble">
             <section class="boxDoble">
@@ -206,7 +206,7 @@
                 <a href="#" target="_blank" class="botonSecundario">Donar para esta campaña</a>
             </section>
             <section class="boxDoble">
-              <img src="./img/camapana2.jpg" alt="Refacción de aulas">
+              <img src="./img/campana2.jpg" alt="Refacción de aulas">
             </section>
           </section>
         </section>
@@ -292,6 +292,5 @@
   <!-- Scripts -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="./javascript/index.js"></script>
-  <script src="./javascript/btnHamburguesa.js"></script>
 </body>
 </html>
