--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   <footer id="footer" role="contentinfo" class="bgAzul">
     <section class="contenedor">
       <section class="gridContenedorSimple">
-        <a href="#" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
+        <a href="./faq.html" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
         <a href="#" class="linksFooter textoCelesteClarito">Política de Privacidad</a>
 
       </section>
