correccion link FAQ

--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,7 @@
       </section> 
       <section id="nav" class="contenedor navegador1">      
         <ul id="navegador" class="top_menu"> 
-          <li><a href="#">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./index.html#nosotros">Nosotros</a></li>
           <li><a href="./index.html#acciones" class="rayita">Acciones</a></li>
           <li><a href="./index.html#socios" class="rayita">Socios/as</a></li> 
